--- a/package.json
+++ b/package.json
@@ -75,7 +75,6 @@
     "ngx-toastr": "12.0.0",
     "ngx-ui-switch": "9.0.1",
     "ngx-videogular": "9.0.1",
-    "node-sass": "4.13.1",
     "nouislider": "14.1.1",
     "postcss-rtl": "1.7.3",
     "prismjs": "1.19.0",
@@ -106,6 +105,7 @@
     "karma-coverage-istanbul-reporter": "2.1.1",
     "karma-jasmine": "3.1.1",
     "karma-jasmine-html-reporter": "1.5.2",
+    "node-sass": "^4.14.1",
     "protractor": "5.4.3",
     "rxjs-compat": "6.5.4",
     "ts-node": "8.6.2",
